src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>AdvertisingMedium__c</fullName>
        <description>SFDC1 - 62; Marketing Campaign field to know medium of advertising. Only for Marketing Campaign users</description>
        <inlineHelpText>Type of advertising, for example Print or Search.</inlineHelpText>
        <label>Advertising Medium</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>Search</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
                <value>
                    <fullName>Retargeting</fullName>
                </value>
                <value>
                    <fullName>Display/Banner (Excludes Retargeting)</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AssetOffer__c</fullName>
        <description>SFDC1 - 62; Field is used for Marketing campaign user</description>
        <inlineHelpText>Asset or Offer associated with the campaign. (Multiple Allowed)</inlineHelpText>
        <label>Asset/Offer</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blog/Commentary Post</fullName>
                </value>
                <value>
                    <fullName>Case Study</fullName>
                </value>
                <value>
                    <fullName>Contact Analyst/Expert</fullName>
                </value>
                <value>
                    <fullName>Contact Sales</fullName>
                </value>
                <value>
                    <fullName>Contest/Game</fullName>
                </value>
                <value>
                    <fullName>Customer Testimonial</fullName>
                </value>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>eBook</fullName>
                </value>
                <value>
                    <fullName>eCommerce</fullName>
                </value>
                <value>
                    <fullName>eNewsletter</fullName>
                </value>
                <value>
                    <fullName>Free Trial</fullName>
                </value>
                <value>
                    <fullName>In-person Event</fullName>
                </value>
                <value>
                    <fullName>Infographic</fullName>
                </value>
                <value>
                    <fullName>Mobile App</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Podcast</fullName>
                </value>
                <value>
                    <fullName>Product Brochure</fullName>
                </value>
                <value>
                    <fullName>Sample Report/Data/Map</fullName>
                </value>
                <value>
                    <fullName>Third-party Industry Research</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Webinar/Webcast</fullName>
                </value>
                <value>
                    <fullName>White Paper</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CampaignAttributes__c</fullName>
        <description>SFDC1-6634 : Existing Checkbox &apos;Nurture&apos; and &apos;Product Launch/Release&apos; has been replaced with new Multipicklist.For Marketing Campaign Only.</description>
        <inlineHelpText>Attributes associated with the campaign, for example Nurture or Product Release.</inlineHelpText>
        <label>Campaign Attributes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nurture</fullName>
                </value>
                <value>
                    <fullName>Product Launch/Release</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CampaignGoal__c</fullName>
        <description>SFDC1 - 62, For Marketing campaign user only, describe the campaign goal</description>
        <inlineHelpText>Goal associated with the campaign, for example Lead Generation or Brand Awareness. (Multiple Allowed)</inlineHelpText>
        <label>Campaign Goal</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Brand Awareness</fullName>
                </value>
                <value>
                    <fullName>Lead Generation</fullName>
                </value>
                <value>
                    <fullName>Retention</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CampaignNumber__c</fullName>
        <description>SFDC1-1061; Auto generated number for Campaign - PC{012000}</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique campaign identifier used for tracking on websites and other marketing platforms. (Automatically generated)</inlineHelpText>
        <label>Campaign Number</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Commissionable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-1955;checkbox field for Marketing Campaign</description>
        <inlineHelpText>Checkbox to mark if sales campaign is commisionable.</inlineHelpText>
        <label>Commissionable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LegacyIDUnique__c</fullName>
        <description>SFDC1-7046: Legacy ID Unique field is a concatenation of the source system name and a source system record id to ensure record is uniquely identified.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field store the concatenation of the source system name and a source system record id to ensure the record is uniquely identified.</inlineHelpText>
        <label>LegacyIDUnique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>SFDC1-6218 : Legacy Campaign identifier for migrated cases. First 3 letters identifies the source system
SFDC1-6356 : Updating only label to &apos;Legacy Campaign ID&apos;</description>
        <externalId>true</externalId>
        <inlineHelpText>Source system record id.</inlineHelpText>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyReference__c</fullName>
        <description>SFDC1-7046: Legacy Reference field is a friendly system reference to the source record.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is a friendly system reference to the source record.</inlineHelpText>
        <label>LegacyReference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacySystem__c</fullName>
        <description>SFDC1-7046: Legacy System field is a picklist that represents the original system the record came from.</description>
        <inlineHelpText>Name of the CRM system the source record came from</inlineHelpText>
        <label>LegacySystem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LegacySystem</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MarketingTeam__c</fullName>
        <description>SFDC1 - 62 Different Marketing team in organisation
SFDC1-7965: Updated picklist value</description>
        <inlineHelpText>The internal Marketing Team that executed the campaign. (Multiple Allowed)</inlineHelpText>
        <label>Marketing Team</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aerospace, Defense &amp; Security</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Chemical(OMDC)</fullName>
                </value>
                <value>
                    <fullName>Central Marketing &amp; Communications</fullName>
                </value>
                <value>
                    <fullName>Country Marketing</fullName>
                </value>
                <value>
                    <fullName>Economics &amp; Country Risk</fullName>
                </value>
                <value>
                    <fullName>Energy (Upstream + PGCR)</fullName>
                </value>
                <value>
                    <fullName>Engineering &amp; Product Design</fullName>
                </value>
                <value>
                    <fullName>FinancialServices</fullName>
                </value>
                <value>
                    <fullName>Maritime &amp; Trade</fullName>
                </value>
                <value>
                    <fullName>OPIS</fullName>
                </value>
                <value>
                    <fullName>Technology, Media &amp; Telecom</fullName>
                </value>
                <value>
                    <fullName>Sales/Sales Ops</fullName>
                </value>
                <value>
                    <fullName>Chemical</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Corporate Marketing &amp; Communications</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Financial Markets</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Oil, Midstream, Downstream and Chemical (OMDC)</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Oil,Midstream,Downstream &amp; Chemical (OMDC)</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Oil,Midstream,Downstream,Chemical (OMDC)</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PKIDCampaign__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>Cmp{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID Campaign</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>RequestedBySponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1 - 62 ; User who request/sponsor this Marketing Campaign</description>
        <inlineHelpText>The sponsor or person who requested the campaign.</inlineHelpText>
        <label>Requested By/Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesCampaignType__c</fullName>
        <description>SFDC1-5972 New ‘Sales Campaign Type’ Field for Sales Campaigns</description>
        <inlineHelpText>Type of sales campaign.</inlineHelpText>
        <label>Sales Campaign Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consulting Referral Incentive</fullName>
                </value>
                <value>
                    <fullName>Cross Sell Referral Incentive</fullName>
                </value>
                <value>
                    <fullName>Multi-Year Agreement Incentive</fullName>
                </value>
                <value>
                    <fullName>Sales Incentive (SPIFF, Commissionable)</fullName>
                </value>
                <value>
                    <fullName>Sales Initiative (Campaigns, Synergies, Contests)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TargetedIndustry__c</fullName>
        <description>SFDC1 - 62 ; Marketing Campaign use only, Details of all targeted industry</description>
        <inlineHelpText>Targated Industry associated with the campaign. (Multiple Allowed)</inlineHelpText>
        <label>Targeted Industry</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Academic/Education</fullName>
                </value>
                <value>
                    <fullName>Aerospace &amp; Defense</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Air Transport</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Business Services/Consulting</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Coal</fullName>
                </value>
                <value>
                    <fullName>Commodities Trading</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Energy Equipment</fullName>
                </value>
                <value>
                    <fullName>Energy Services</fullName>
                </value>
                <value>
                    <fullName>Financial/Asset Management</fullName>
                </value>
                <value>
                    <fullName>Food Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Land Transport</fullName>
                </value>
                <value>
                    <fullName>Local/State Government</fullName>
                </value>
                <value>
                    <fullName>Logistics &amp; Shipping</fullName>
                </value>
                <value>
                    <fullName>Maritime</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Metals/Mining</fullName>
                </value>
                <value>
                    <fullName>Military/Security Government</fullName>
                </value>
                <value>
                    <fullName>National Government</fullName>
                </value>
                <value>
                    <fullName>Non-Governmental Organizations (NGO)</fullName>
                </value>
                <value>
                    <fullName>Oil and Gas</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other Manufacturing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TargetedRegionCountry__c</fullName>
        <description>SFDC1 - 62 Marketing Campaign use only. All Targeted region/country for organisation</description>
        <inlineHelpText>Region or Country associated with the campaign. (Multiple Allowed)</inlineHelpText>
        <label>Targeted Region/Country</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Region: Global</fullName>
                </value>
                <value>
                    <fullName>Region: Americas</fullName>
                </value>
                <value>
                    <fullName>Region: APAC</fullName>
                </value>
                <value>
                    <fullName>Region: Europe</fullName>
                </value>
                <value>
                    <fullName>Region: Latin America</fullName>
                </value>
                <value>
                    <fullName>Region: Middle East</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Costa Rica</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Ecuador</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>El Salvador</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>French Guiana</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CampaignNumber__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>All_Inactive_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Inactive Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CampaignNumber__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <recordTypes>
        <fullName>MarketingCampaign</fullName>
        <active>true</active>
        <description>Marketing Campaign - for Marketing people only</description>
        <label>Marketing Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>SalesCampaign</fullName>
        <active>false</active>
        <description>Sales Campaign - for Sales people only</description>
        <label>Sales Campaign</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>SalesOpsUserCanNotEditMarketingCampaign</fullName>
        <active>true</active>
        <description>SFDC1-1951 As part of this bug fix sales ops user should not be able to edit marketing record type campaign. They will be able to edit only Sales campaign records.
SFDC1-4562 - Updated validation rule so that Admins can edit marketing campaign.</description>
        <errorConditionFormula>AND(
	RecordType.Name &lt;&gt; &apos;Sales Campaign&apos;,
	NOT(ISNEW()),
	NOT(Contains($Profile.Name,&apos;Marketing&apos;)),
        NOT(Contains($Profile.Name,&apos;System Administrator&apos;)),
        NOT(Contains($Profile.Name,&apos;System Admin&apos;))
)</errorConditionFormula>
        <errorMessage>You do not have access to edit this Marketing Campaign. Only Marketing users can edit a Marketing campaign.</errorMessage>
    </validationRules>
</CustomObject>